// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonSpinner > should render 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
  />
</div>
`;

exports[`ButtonSpinner > should render a danger variant 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
    color="danger"
  />
</div>
`;

exports[`ButtonSpinner > should render a info variant 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
    color="info"
  />
</div>
`;

exports[`ButtonSpinner > should render a primary variant 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
    color="primary"
  />
</div>
`;

exports[`ButtonSpinner > should render a reverse variant 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
    color="reverse"
  />
</div>
`;

exports[`ButtonSpinner > should render a secondary variant 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
    color="secondary"
  />
</div>
`;

exports[`ButtonSpinner > should render a transparent variant 1`] = `
<div>
  <div
    class="h-6 w-6 animate-spin rounded-full border-4 border-theme-secondary-200 border-l-theme-primary-500"
    color="transparent"
  />
</div>
`;
